Remove "Download HTML" from preview

--- a/dr-echo-project/Frontend/html/template.html
+++ b/dr-echo-project/Frontend/html/template.html
@@ -98,7 +98,7 @@
                     <td>Breast Imaging</td>
                     <td><span class="badge badge-mri">MRI</span></td>
                     <td><button class="btn-icon" onclick="previewTemplate('breast-mammography')">👁️</button></td>
-                    <td><button class="btn-use" onclick="useTemplate('breast-mammography','Breast Mammography')">Use Template</button></td>
+                    <td><a href="#" class="btn-use">Use Template</a></td>
                 </tr>
 
                 </tbody>
@@ -121,7 +121,6 @@
         </div>
         <div class="modal-actions">
             <button class="btn-secondary" onclick="closeModal()">Close</button>
-            <button class="btn-use" onclick="downloadTemplate()">📥 Download HTML</button>
         </div>
     </div>
 </div>
